--- a/index.html
+++ b/index.html
@@ -43,6 +43,13 @@
                 </tbody>
             </table>
         </div>
+        <div class="hero">
+            <label for="odb">Pozice odebrat ze seznamu</label>
+            <input id="bam" type="text" name="odb">
+            <button onclick="odebrat()">Odebrat</button>
+            <button onclick="odebrat_prvni()">Odebrat první</button>
+            <button onclick="odebrat_posledni()">Odebrat poslední</button>
+        </div>
     </main>
     <footer>
 
